# yanndan-programmation

Java/CFX00854407/: .classpath  .project
Java/Common/: .gitignore
Java/ExternalLibraries/: 7zip LZMA SDK.bat  Apache PDFBox.bat  Apache POI Common (org.apache.poi).bat  Appache  commons-httpclient.bat  Appache Jena.bat  BouncyCastle.bat  DOWNLOAD_AND_UNZIP_FILE_FROM_LINK.bat  DOWNLOAD_FILE_FROM_LINK.bat  Gluon Attach.bat  Guava.bat  Jackson Databind.bat  Java 3D Core.bat  JavaFX.bat  Kotlin JVM Plugin.bat  OpenCSV.bat  Passay.bat  SPIRE XLS Free.bat  __install_all.bat  axway ATS  Automated testing of Swing application .bat  com.github.almasb fxgl .bat  junit-pioneer.bat  openjfx-22.0.1_windows-x64_bin-sdk.bat  zip4j.bat
Java/_How To Install/: Eclipse Formatter.xml  How to install Java - IntelliJ.txt  How to install Java_eclipse.txt
LibreCAD/: .gitignore
LibreCAD/PlanMaisonBLR/: Plan RDC intérieur sol maison BLR.dxf
Python/: .gitignore  COPY_DEPENDENCIES.bat  INSTALL_INTERNAL_DEPENDENCIES.bat  SET_PYTHON_HOME.bat  UPGRADE_PIP_VERSION.bat  Visual studio code extensions.txt  ZZZ_old_COPY_INTERNAL_DEPENDENCIES.bat  install_common_libraries.bat  install_external_common_libraries.bat
Python/.cspell/: custom-dictionary.txt
Python/ChampFX/: .gitignore  actions_log.json  main_create_cfx.py  open_web_page_and_save_all_user_interractions.py  pyproject.toml
Python/CloseTheBox/: .gitignore  pyproject.toml
Python/Common/: Constants.py  custom_iterator.py  date_time_formats.py  example_translation_file.json  file_name_utils.py  file_size_utils.py  language_utils.py  list_utils.py  mypy.ini  pyproject.toml  requirements.txt  string_utils.py  test_custom_iterator.py  test_date_time_formats.py  test_list_utils.py  test_tokenization_string.py  tokenization_string.py  unit_tests_helpers.py
Python/Common/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
Python/Common/src/common/: bytes_messages.py  constants.py  custom_iterator.py  date_time_formats.py  download_utils.py  enums_utils.py  excel_utils.py  file_download_with_progress_bar.py  file_name_utils.py  file_size_utils.py  file_utils.py  ip_address_utils.py  json_encoders.py  json_utils.py  language_utils.py  lengths.py  list_utils.py  multilanguage_management.py  pandas_utils.py  reports_utils.py  string_utils.py  text_to_speach.py  time_utils.py  unit_tests_helpers.py  web_driver_utils.py
Python/Common/src/test/: example_translation_file.json  test_bytes_messages.py  test_custom_iterator.py  test_enums_utils.py  test_excel_util.py  test_file_name_utils.py  test_ip_address_utils.py  test_language_utils.py  test_list_utils.py  test_multilanguage_management.py  test_string_utils.py  test_tokenization_string.py
Python/Common/src/test/resources/: excel_file_for_test_1.xlsx
Python/CreateChampFX/: main_create_cfx.py  pyproject.toml
Python/DirectoryStats/: application.py  detailview.py  explorerview.py  main.py  main_view.py
Python/DownloadAndCleanDML/: download_and_clean_dml.py  param.py  parse_dml.py  pyproject.toml
Python/ExampleApplication/: main.py  pyproject.toml
Python/ExampleApplication/exampleapplication/: exponentiation.py  main.py  tetration.py
Python/ExampleApplication/tests/: test_application.py  test_tetration.py
Python/ExampleLibrary/: .gitignore  README.md  pyproject.toml
Python/ExampleLibrary/ExampleLibrary/: addition.py  multiplication.py
Python/ExampleLibrary/example_library/: addition.py
Python/ExampleLibrary/src/examplelibrary/: addition.py
Python/ExampleLibrary/src/tests/: test_addition.py  test_multiplication.py
Python/ExampleLibrary/tests/: test_addition.py  test_multiplication.py
Python/ExtractCodeToDebugInTCM/: c_produits.json  extract next_training_code.bat  lancement extraction.bat  lancement_visual_studio testing simulator.bat  lancement_visual_studio_acq- next.bat  lancement_visual_studio_server - next.bat  lancement_visual_studio_server.bat  lancement_visual_studio_training - next .bat  next_acqnopc_only.json  next_all_code.json  next_common_env_variables_setting.bat  next_server_code_only.json  next_server_code_with_third_party.json  next_testing_simulator.json  next_training_code.json  riyl_server_and_training_code_with_third_party.json  xt_pcc_tools.json
Python/ExtractEmbeddedInWordDoc/: .gitignore  main.py  (+2 more)
Python/Logger/: .gitignore  logger_config.py  pyproject.toml
Python/Logger/src/logger/: example_of_use.py  logger_config.py
Python/Logger/src/logger.egg-info/: PKG-INFO  SOURCES.txt
Python/M3uToFreebox/: .gitignore  M3uToFreebox.bat  application.py  destinations.py  detailsview.py  m3u.py  m3u_search_filters.py  main.py  main_view.py  mypy.ini  param.py  pyproject.toml  sample_m3u_legal_links.m3u  test_m3u_search_filters.py
Python/M3uToFreebox/src/m3utofreebox/: application.py  destinations.py  detailspopup.py  detailsview.py  m3u.py  m3u_search_filters.py  main.py  main_view.py  xspf.py
Python/M3uToFreebox/src/test/: test_application_without_hmi.py  test_m3u_search_filters.py
Python/PatchAcqTerm/: .gitignore  main.py  pyproject.toml
Python/ShutTheBox/: main.py  pyproject.toml
Python/ShutTheBox/src/closethebox/: application.py  dices.py  main.py
Python/ShutTheBox/src/shutthebox/: application.py  combinations_to_reach_sum.py  dices.py  gui.py  param.py
Python/ShutTheBox/src/test/: test_application.py  test_combinations_to_reach_sum.py  test_dices.py  test_toto.py
Python/SudokuSolverDeepSeek/: README.md  main.py  pyproject.toml
Python/SudokuSolverDeepSeek/resources/: translations.json
Python/SudokuSolverDeepSeek/src/: gui.py  rule_engine.py  sudoku.py  translations.json
Python/SudokuSolverDeepSeek/src/sudoku_solver/: gui.py  solver.py
Python/SudokuSolverDeepSeek/sudoku_solver/: constants.py  difficulties.py  game_difficulty  generator.py  gui.py  logger2.py  logger_sudoku.py  main.py  rule_engine.py  solver.py  sudoku.py  translations.json  utils.py
Python/SudokuSolverDeepSeek/sudoku_solver/ui/: controller.py
Python/SudokuSolverDeepSeek/tests/: test_difficulties.py  test_generator.py  test_gui.py  test_solver.py  test_sudoku.py
(+349 files in other folders)
