[tool.poetry]
name = "common-library"
version = "0.1.0"
description = "Une bibliothèque partagée pour plusieurs projets"

# Détails sur les dépendances
[tool.poetry.dependencies]


# Configuration de développement (si nécessaire)
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
pylint = "^2.10.2"


[tool.black]
line-length = 88  # Longueur maximale des lignes pour Black

[tool.mypy]
files = "src"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_configs = true

[tool.pylint]
disable = ["C0114", "C0116"]  # Désactivation de certaines règles
max-line-length = 88  # Longueur maximale des lignes
