[tool.poetry]
name = "common-library"
version = "0.1.0"
description = "Une bibliothèque partagée pour plusieurs projets"

# Détails sur les dépendances
[tool.poetry.dependencies]


# Configuration de développement (si nécessaire)
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
pylint = "^2.10.2"


[tool.black]
line-length = 88  # Longueur maximale des lignes pour Black

[tool.mypy]
# Specify files or directories to analyze
files = "src"

# Disallow functions or methods without type annotations
disallow_untyped_defs = true

# Disallow calls to functions or methods without type annotations
disallow_untyped_calls = true

# Enforce type annotations for partially defined functions
disallow_incomplete_defs = true

# Check untyped function definitions even if they are not called
check_untyped_defs = true

# Warn if a function returns a value of type "Any"
warn_return_any = true

# Ignore missing imports (useful for third-party libraries without type hints)
ignore_missing_imports = true

# Warn if configurations are defined but unused
warn_unused_configs = true

# Enable strict checks for optional types (e.g., Optional[str])
strict_optional = true

# Warn about redundant type casts
warn_redundant_casts = true

# Warn about unnecessary "type: ignore" comments
warn_unused_ignores = true


[tool.pylint]
disable = ["C0114", "C0116"]  # Désactivation de certaines règles
max-line-length = 89  # Longueur maximale des lignes
