[tool.poetry]
name = "m3utofreebox-app"

[tool.black]
line-length = 120  # Longueur maximale des lignes pour Black

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]  # Désactivation de certaines règles
#missing-function-docstring
#missing-module-docstring
#Missing class docstringPylintC0115:missing-class-docstring
max-line-length = 120  # Longueur maximale des lignes
